Novo caso de teste no demo.