@@ -12,8 +12,8 @@
 
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>1.11</maven.compiler.target>
-        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.17</maven.compiler.target>
+        <maven.compiler.source>1.17</maven.compiler.source>
         <junit.jupiter.version>5.4.2</junit.jupiter.version>
   </properties>
   
@@ -24,6 +24,20 @@
 			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<systemPath>/mnt/d/Users/mcmor/Dropbox/M/WSGitLocalNew/MavenRep/utiltimecounter.jar</systemPath>
+			<groupId>br.pucrs</groupId>
+			<artifactId>util</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+		</dependency>
+		<dependency>
+			<systemPath>/mnt/d/Users/mcmor/Dropbox/M/WSGitLocalNew/MavenRep/Algorithms_Sort.jar</systemPath>
+			<groupId>br.pucrs</groupId>
+			<artifactId>util</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+		</dependency>
   </dependencies>
   
   <build>
@@ -33,12 +47,17 @@
     			<artifactId>maven-compiler-plugin</artifactId>
     			<version>3.8.0</version>
     			<configuration>
-       		 		<release>11</release>
+       		 		<release>17</release>
+					<compilerArgs>--enable-preview</compilerArgs>
     			</configuration>
+				
 			</plugin>
             <plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 		        <groupId>org.codehaus.mojo</groupId>
